fix: adjust covering image

--- a/source/sass/component/_image.scss
+++ b/source/sass/component/_image.scss
@@ -64,9 +64,14 @@ $c-image-border-radius: var(--c-image-border-radius, $border-radius-xs) !default
     &.c-image--cover {
         @include cover();
         .c-image__image {
+            position: absolute;
+            top: 50%; 
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 100%;
+            height: 100%;
             object-fit: cover;
-            height: inherit;
-            width: inherit;
+            object-position: 50% 50%;
         }
     }
 
